2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	A embed/mozilla/AutoWindowModalState.cpp:
	A embed/mozilla/AutoWindowModalState.h:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/FilePicker.h:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/Makefile.am:

	Prevent DOM window closure while we display a modal dialogue on it.

2006-07-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c
	(ephy_bookmark_action_sync_smart_url):
	
	Don't cast to gboolean but check for != NULL instead.

2006-07-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:
	
	Add fur.

2006-06-25  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/epiphany.defs:
	* src/epiphany.override:
	* src/Makefile.am:

	Add EphyFindToolbar type to Python binding. 
	Bug #345837.

2006-06-23  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/MozRegisterComponents.cpp: (mozilla_register_components):

	Fix a warning from gecko "Bad contract id registed with the script namespace manager".
	Only unregister xpinstall factory with gecko >= 1.9.

2006-06-22  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.h:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/MozRegisterComponents.cpp:
	* lib/Makefile.am:
	A lib/ephy-password-dialog.c:
	A lib/ephy-password-dialog.h:

	Implement nsITokenPasswordDialogs. Misc cleanups and mozilla string
	simplification now that we depend on gecko 1.8.

2006-06-22  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix 'unknown gecko' error output.

2006-06-21  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintSession.cpp: