@@ -1,5 +1,12 @@
 2006-07-06  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/AutoWindowModalState.cpp:
+	* embed/mozilla/AutoWindowModalState.h:
+
+	Fix the build.
+
+2006-07-06  Christian Persch  <chpe@cvs.gnome.org>
+
 	A embed/mozilla/AutoWindowModalState.cpp:
 	A embed/mozilla/AutoWindowModalState.h:
 	* embed/mozilla/ContentHandler.cpp:
